# jobwell

./: Ideal-proj-structre.md  Plan.md  compose.yaml  main.py  pyproject.toml
app/bootstrap/: wiring.py
app/config/: constants.py  settings.py
app/domains/dto/: search_response.py
app/domains/enums/: document_type.py  record_type.py
app/domains/models/: chunk.py  extracted_metadata.py  job_ingestion.py  job_posting.py  vector_document.py
app/graph/ingestion/: workflow.py
app/graph/ingestion/nodes/: chunk_document.py  extract_metadata.py  generate_embeddings.py  normalize.py  store_vectors.py  validate.py
app/graph/shared/: state.py
app/prompts/: metadata_extraction.txt  search_document_generation.txt  skill_extraction.txt
app/services/chunking/: chunking_service.py
app/services/embeddings/: base.py  ollama_bge_m3_embedding_service.py
app/services/extraction/: metadata_extraction_service.py
app/services/llm/: base.py  ollama_gemma_llm_service.py
app/services/search/: semantic_search_service.py
app/services/vectorstore/: base.py  qdrant_store_service.py
app/utils/: json.py  logging.py
docker/qdrant/: qdrant.Dockerfile
nodes/: mock_llm.py
scripts/: create_qdrant_collection.py
tests/: conftest.py
tests/integration/: test_end_to_end_search.py  test_integration_workflow.py  test_ollama_embeddings.py  test_ollama_llm.py  test_qdrant_sastore.py  test_search_returns_company_metadata.py  test_search_returns_job_title_metadata.py  test_search_returns_scores.py  test_semantic_search.py
