[project]
name = "jobsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "langgraph>=1.2.2",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "qdrant-client>=1.18.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
